# argon-lang

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  apm.bat  apm.sh  ar.bat  ar.sh  argon.sh  argonweb-cli.sh  bootstrap-direct.sh  bootstrap.sh  build.sh  cryoweb-cli.sh  docker-compose.db.yml  repl.bat  repl.sh  test_generic_call.ar  test_monomorphization.ar  test_stdlib.ar  test_stdlib.cryo
docs/: BENCHMARK_EXPLANATION.md  BENCHMARK_VS_RUST.md  InstallationLog.txt  RENAME_PLAN.md  SESSION_SUMMARY.md  argon_design_doc.md  argonweb_design.md  async_design.md  bootstrap_fix.md  concurrency_design.md  creating_packages.md  database_drivers.md  debugger_design.md  defer_design.md  demo_design.md  ffi_design.md  gc_design.md  generics_design.md  lsp_design.md  macros_design.md  optimization_design.md  package_manager_design.md  performance_optimization.md  running_native.md  stdlib_reference.md  struct_implementation_summary.md  threading_design.md  traits_design.md  wasm_design.md
examples/: api_server.ar  api_server.cryo  argon_loader.js  argon_web.ar  argon_web.cryo  argonweb_demo.ar  argonweb_demo.cryo  async_example.ar  async_example.cryo  channel_example.ar  channel_example.cryo  debug_test.cryo  debug_traits.cryo  defer_test.cryo  enterprise_test.ar  enterprise_test.cryo  ffi_example.ar  ffi_example.cryo  ffi_test.ar  ffi_test.cryo  fibonacci.cryo  gc_test.ar  gc_test.cryo  hello.cryo  http_server.ar  http_server.cryo  json_api.ar  json_api.cryo  linked_list.cryo  macros_test.ar  macros_test.cryo  math_utils.ar  swagger_server.ar  (+49 more)
(+121 files in other folders)
