[package]
name = "argon"
version = "2.24.0"
edition = "2021"
description = "Argon Language Interpreter - Compiles Argon to LLVM IR"
authors = ["TheFahmi"]

[dependencies]
rustc-hash = "1.1"

[[bin]]
name = "argon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
