[package]
name = "cryo"
version = "4.0.0"
edition = "2021"
description = "Cryo Language - High-Performance Self-Hosted Systems Programming Language"
authors = ["TheFahmi"]

[dependencies]
rustc-hash = "1.1"
libloading = "0.8"

# JIT Compilation (Cranelift)
cranelift = "0.95"
cranelift-module = "0.95"
cranelift-jit = "0.95"
cranelift-codegen = "0.95"
cranelift-frontend = "0.95"
cranelift-native = "0.95"
target-lexicon = "0.12"

[[bin]]
name = "cryo"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

